[package]
name = "derive_builder"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
proc-macro2 = { version = "1.0" }
# for personal ast parse
syn = { version = "1.0", features = ["extra-traits"] }
# for parse the syn ast to std Token
quote = { version = "1.0" }
